force-app/main/default/objects/Claims__x/Claims__x.object-meta.xml
<CustomObject>
    <description>Claims</description>
    <externalDataSource>Salesforce_Connect</externalDataSource>
    <externalName>Claims</externalName>
    <label>Claims</label>
    <pluralLabel>Claims</pluralLabel>
</CustomObject>