force-app/main/default/objects/Claims__x/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved</description>
    <externalDeveloperName>Approved</externalDeveloperName>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>