force-app/main/default/objects/Claims__x/fields/ClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>ClaimAmount__c</fullName>
    <description>ClaimAmount</description>
    <externalDeveloperName>ClaimAmount</externalDeveloperName>
    <label>ClaimAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>