force-app/main/default/objects/Claims__x/fields/ClaimDate__c.field-meta.xml
<CustomField>
    <fullName>ClaimDate__c</fullName>
    <description>ClaimDate</description>
    <externalDeveloperName>ClaimDate</externalDeveloperName>
    <label>ClaimDate</label>
    <type>Date</type>
</CustomField>