force-app/main/default/objects/Claims__x/fields/ClaimReason__c.field-meta.xml
<CustomField>
    <fullName>ClaimReason__c</fullName>
    <description>ClaimReason</description>
    <externalDeveloperName>ClaimReason</externalDeveloperName>
    <label>ClaimReason</label>
    <length>128</length>
    <type>Text</type>
</CustomField>