force-app/main/default/objects/Claims__x/fields/PolicyId__c.field-meta.xml
<CustomField>
    <fullName>PolicyId__c</fullName>
    <description>PolicyId</description>
    <externalDeveloperName>PolicyId</externalDeveloperName>
    <label>PolicyId</label>
    <length>128</length>
    <referenceTo>Policies__x</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>ExternalLookup</type>
</CustomField>